fix: horizontal scroll

--- a/app/scss/wolf-cola.scss
+++ b/app/scss/wolf-cola.scss
@@ -18,6 +18,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 
 ::-webkit-scrollbar-track {
